<resources>
    <string name="app_name">Our House</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_combination">The email and password combination is not recognized</string>
    <string name="error_network">There has been a network issue. Please try again.</string>
    <string name="error_general">There has been an error. Please try again in a bit.</string>
    <string name="error_exists">This email already exists in the system</string>
    <string name="error_password">Password must be at least 6 characters long</string>

    <string name="group_name">Group Title</string>
    <string name="group_code">Group Code</string>
    <string name="unique_group_identifier">Group ID Name</string>
    <string name="action_join_group">Join Group</string>
    <string name="join_group_title">Join Existing Group</string>
    <string name="create_new_group_title">Create New Group</string>
    <string name="action_create_group">Create Group</string>


    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nav_manage_groups">Manage Groups</string>
    <string name="nav_about_our_house">About Our House</string>
    <string name="nav_logout">Logout</string>
    <string name="create_group_message">NOTE: The group ID name must be unique and the group code is for those who want to join your group.</string>
    <string name="join_group_message">Ask someone for the unique group ID name and code so you can join their group!</string>
    <string name="ID_taken">This ID is already taken.</string>
    <string name="invalid_group_name">This group name is not valid</string>
    <string name="invalid_group_combo_join">This ID and code combination is not recognized</string>
    <string name="error_heading">Error:</string>
    <string name="nav_group_info">Current Group Info</string>
    <string name="bottom_nav_whiteboard">Whiteboard</string>
    <string name="bottom_nav_shopping_lists">Shopping Lists</string>
    <string name="bottom_nav_chores">Chores</string>
    <string name="bottom_nav_expenses">Expenses</string>
    <string name="bottom_nav_home">Home</string>
    <string name="issue_message">There has been an issue. Please try again in a bit.</string>
    <string name="existing_groups">Existing Groups</string>
    <string name="title_of_note">Title of Note</string>
    <string name="body_of_note">Body of Note</string>
    <string name="add_note_title">New Whiteboard Note</string>
    <string name="add_note_ok">Add Note</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="edit_board_item_title">Edit Whiteboard Item</string>
    <string name="edit_item_ok">Edit Item</string>
    <string name="add_item_okay">Add Item</string>
    <string name="add_house_rule_title">Add House Rule</string>
    <string name="house_rules_title">House Rules</string>
    <string name="house_rule_add_hint">Enter house rule here</string>
    <string name="view_your_expenses">View Your Expenses</string>


</resources>
