<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/nav_about_our_house" />

    <item android:id="@+id/action_group_info"
        android:icon="@drawable/ic_group"
        android:title="@string/nav_group_info" />

    <item android:id="@+id/action_manage"
        android:icon="@drawable/ic_swap"
        android:title="@string/nav_manage_groups" />

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings" />

    <item android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout" />

</menu>
