<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_nav_home"/>
    <item
        android:id="@+id/navExpenses"
        android:icon="@drawable/ic_expenses"
        android:title="@string/bottom_nav_expenses"/>
    <item
        android:id="@+id/navChores"
        android:icon="@drawable/ic_mop"
        android:title="@string/bottom_nav_chores"/>
    <item
        android:id="@+id/navLists"
        android:icon="@drawable/ic_list"
        android:title="@string/bottom_nav_shopping_lists"/>
    <item
        android:id="@+id/navBoard"
        android:icon="@drawable/ic_board"
        android:title="@string/bottom_nav_whiteboard"/>
</menu>