<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/layout_header"
        android:text="@string/join_group_title"
        android:layout_marginBottom="@dimen/header_bottom_margin"
        android:layout_gravity="center_horizontal"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/group_ID_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unique_group_identifier"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/group_code_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_code"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/join_group_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/header_bottom_margin"
        android:text="@string/action_join_group"
        android:textStyle="bold"
        android:textColor="#fff"
        android:backgroundTint="@color/colorBluePrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_group_message"
        android:textSize="@dimen/message_text_size"
        android:layout_marginTop="@dimen/header_bottom_margin"
        android:gravity="center"/>

</LinearLayout>